JavaDocs added